# kasa

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  ast.cpp  ast.h  build.sh  gen_copyright.py  global_stack.cpp  global_stack.h  interpreter.cpp  interpreter.h  kasa  kasa.l  kasa.tab.cpp  kasa.tab.hpp  kasa.y  kasa_assert.cpp  kasa_assert.h  kasa_log.cpp  kasa_log.h  lex.cpp  main.cpp  object.cpp  object.h  object_code.cpp  object_code.h  object_func.cpp  object_func.h  opcode.h  test.ks  test1.ks
